square-app working

--- a/package.json
+++ b/package.json
@@ -3,12 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.18.0",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "material-ui": "^0.20.2",
+    "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.27.0",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.13.1",
+    "rake-js": "^0.1.1",
     "react": "^16.13.1",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-firestore": "^1.0.1",
+    "react-lodash": "^0.1.2",
+    "react-materialize": "^3.9.2",
+    "react-number-format": "^4.4.1",
+    "react-owl-carousel2": "^0.3.0",
+    "react-redux": "^7.2.1",
+    "react-redux-firebase": "^3.7.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-swipeable": "^5.5.1",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.13.0",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
